@startuml
'https://plantuml.com/state-diagram
hide empty description

state covered
state flagged
state revealed
state "wrong flagged" as wrongFlagged
state "bomb revealed" as bombRevealed

[*] --> covered

covered --> flagged : raise flag
flagged --> covered : put down flag

covered --> revealed : reveal cover
revealed --> covered : put on cover

flagged --> wrongFlagged : mark wrong-flagged
revealed --> bombRevealed : mark revealed bomb

wrongFlagged --> [*]
bombRevealed --> [*]

@enduml